<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.onboarding.OnboardingSlideFinalViewModel" />
  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingBottom="80dp"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/final_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:importantForAccessibility="yes"
      android:overScrollMode="always">

      <ImageView
        android:id="@+id/slide_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:layout_constraintDimensionRatio="5:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_portrait_onboarding_3" />

      <TextView
        android:id="@+id/slide_title_text_view"
        style="@style/Heading1"
        android:layout_width="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_slide_3_title"
        android:textColor="@color/component_color_shared_primary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slide_image_view" />

      <TextView
        android:id="@+id/slide_description_text_view"
        style="@style/Subtitle1ViewCenterHorizontal"
        android:layout_width="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        android:maxLines="2"
        android:minLines="2"
        android:text="@string/onboarding_slide_3_description"
        android:textColor="@color/component_color_shared_secondary_1_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slide_title_text_view" />

      <Button
        android:id="@+id/get_started_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/primary_rounded_button"
        android:fontFamily="sans-serif-medium"
        android:minHeight="48dp"
        android:onClick="@{(v) -> viewModel.clickOnGetStarted()}"
        android:text="@string/get_started"
        android:textColor="@color/component_color_shared_secondary_4_text_color"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slide_description_text_view" />

      <TextView
        android:id="@+id/slide_terms_of_service_and_privacy_policy_links_text_view"
        style="@style/TextViewCenter"
        android:layout_width="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/component_color_shared_primary_text_color"
        android:textColorLink="@color/component_color_shared_link_text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get_started_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</layout>
