...
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_secondary_background_color">

    <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/onboarding_slide_view_pager"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:overScrollMode="never"
      android:scrollbars="none"
      app:layout_constraintBottom_toTopOf="@id/get_started_container"
      app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slide_dots_container"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
        app:tint="@color/component_color_onboarding_activity_arrow_color" />

      <TextView
        android:id="@+id/skip_text_view"
        style="@style/CaptionViewCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
...
